# SAOD_coursework

./: CMakeLists.txt  README.md  lab1.cpp  list.cpp  main.cpp  makefile  test.cpp
src/: coding.cpp  coding.hpp  func.cpp  func.h  list.cpp  list.hpp  main.cpp  struct.hpp  tree.cpp  tree.hpp
